	  Pico's behavior. (DLR)
  version()
	- Remove obsolete reference to --enable-undo. (David Benbennick)
  do_int_speller()
	- Make internal spell program use sort -f and uniq to create a less
	  redundant word list.  [The only reason this is going in during 
	  feature freeze is because the int speller is useless as is and should
	  either be improved or removed.  I chose improved].
  do_int_speller(), do_alt_speller()
	- Programs now return char *, NULL for successful completion,
	  otherwise the error string to display.  This allows us to give
	  more useful feedback to the user when spell checking fails.
  ABCD()
	- Renamed abcd(). (DLR)
- nano.h:
	- Make sure NO_RCFILE and COLOR_SYNTAX aren't set to the same
	  value. (DLR; discovered by Ken Tyler)
	- If strcasecmp() and/or strncasecmp() aren't available, use
	  strcmp() and/or strncmp instead. (DLR)
- utils.c:
  is_cntrl_char()
	- Rework to fix a problem with displaying certain high-bit
	  characters. (David Benbennick; reported by Andrzej Marecki)
- winio.c:
  edit_refresh()
	- Miscellaneous cleanups that fix a bug where the screen
	  isn't updated after uncutting chunks of upwardly marked cut
	  text that are over a page in length. (David Benbennick)
  do_credits()
	- Add David Benbennick to credits. (DLR)
- nanorc.sample:
	- Added comment to explain the non-escaping of quotes in
	  color regexes, based on info provided by David Benbennick.
	  (DLR)
	- Added some examples for groff and the nanorc courtesy of 
	  Robert D. Goulding.
	- Added double hash marks to comment lines, so people who 
	  uncomment the beginning of every line won't get syntax errors.
- faq.html:
	- Miscellaneous fixes and updates for typos and broken links.
	  It is now fully compliant with HTML 4.01 Transitional. (DLR)
- nano.texi:
	- Typo fixes and updates. (David Benbennick)
- TODO
	- Added some wishlist stuff.
- THANKS:
	- Added Doruk Fisek (Jordi).

GNU nano 1.1.12 - 10/24/2002
- General: